# yarc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_2.md  cookiecutter-config-file.yml  pyproject.toml  python_antlr_guide.md  requirements.txt
docs/: Documentazione_Tecnica.docx  Manuale_Utente.docx  YARC.pptx
docs/diagrams/: classes_yarc.puml  packages_yarc.puml
docs/rdd/: YarcLexer.rrd.html  YarcParser.rrd.html
tests/: test_lexer.py  test_lexer_v3.py  test_parser.py  test_parser_v3.py
tests/assets/: lexer_test.txt  parser_test_1.txt  sample.txt  sample_alt.txt
tests/dsl/: test_lexer.py
tests/resources/: barebone.yrc  demo.yarc  sample.txt  settings.yrc  writers.yrc
tests/rewrite/: barebone.txt  demo.txt  settings.txt  writers.txt
tests/test_example/: test_hello.py
tests/tokens/: barebone.tokens  demo.tokens  settings.tokens  writers.tokens
tests/utils/: save_rewriting.py  save_tokens.py
tests/v3/: test_lexer.py  test_parser.py  test_parser_v3.py
tests/v4/: test_lexer.py  test_parser.py  test_parser_v4.py
yarc/: __init__.py  __main__.py  main.py  yarc.py
yarc/compiler/: YarcCompiler.py  YarcLexer.py  YarcLexerBase.py  YarcParser.py  YarcParser.tokens  YarcParserBase.py  token_mapping.py
yarc/compiler/handlers/: exceptions.py  handler.py  handler_factory.py  replicator_handler.py
yarc/compiler/handlers/formatters/: error_formatter.py  warning_formatter.py
yarc/dsl/: __init__.py  transformGrammar.py
yarc/dsl/base/: YarcLexerBase.py  YarcParserBase.py
yarc/dsl/v3/: YarcLexer.g  YarcLexer.py  YarcLexer.tokens  YarcLexerBase.py  YarcParser.g  YarcParser.py  YarcParser.tokens  YarcParserBase.py  __init__.py  token_mapping.py
yarc/dsl/v3/handler/: error_formatter.py  error_handler.py  guard_method_calls.py  guarded.py  handler.py  handler_factory.py  replicator_handler.py  simbol_stack.py  vector.py  warning_formatter.py
yarc/dsl/v3/templates/: replicator.stg
yarc/dsl/v4/: YarcLexer.g4  YarcLexer.interp  YarcLexer.py  YarcLexer.tokens  YarcLexerBase.py  YarcParser.g4  YarcParser.interp  YarcParser.py  YarcParser.tokens  YarcParserBase.py  __init__.py
yarc/dsl/v4/.antlr/: YarcLexer.interp  YarcLexer.py  YarcLexer.tokens  YarcParser.py
yarc/grammar/: YarcLexer.g  YarcParser.g  __init__.py  language_mappings.py  target_mappings.py  transformGrammar.py
yarc/grammar/clean/: YarcLexer.g  YarcParser.g
yarc/grammar/v4/: YarcLexer.g4  YarcParser.g4
yarc/parser/: Yarc.py  YarcLexer.py  YarcLexerBase.py  YarcParser.py  YarcParserBase.py  token_mapping.py
yarc/parser/base/: YarcLexerBase.py
yarc/parser/handlers/: handler.py  handler_factory.py  replicator_handler.py
yarc/parser/handlers/formatters/: warning_formatter.py
yarc/parser/v3/: yarc.g
yarc/parser/v3/.antlr/: yarcLexer.interp  yarcLexer.py
yarc/parser/v4/: YarcLexer.g4  YarcParser.g4
yarc/parser/v4/.antlr/: .fuse_hidden0000327a00000004  YarcLexer.interp  YarcLexer.java  YarcLexer.py  YarcLexer.tokens  YarcLexerBase.py  YarcParser.interp  YarcParser.py  YarcParserBase.py
yarc/templates/: __init__.py  replicator.stg
